--- a/emoticons/style.css
+++ b/emoticons/style.css
@@ -9,9 +9,18 @@
 
 #received-emoticon {
   margin: 10px auto;
-  background: #eee;
   width: 200px;
   height: 200px;
+  border: 0px;
+}
+#received-emoticon.placeholder {
+  background: 
+  radial-gradient(circle, transparent 20%, slategray 20%, slategray 80%, transparent 80%, transparent),
+  radial-gradient(circle, transparent 20%, slategray 20%, slategray 80%, transparent 80%, transparent) 50px 50px,
+  linear-gradient(#A8B1BB 8px, transparent 8px) 0 -4px,
+  linear-gradient(90deg, #A8B1BB 8px, transparent 8px) -4px 0;
+  background-color: slategray;
+  background-size:100px 100px, 100px 100px, 50px 50px, 50px 50px;
 }
 
 .emoticon {
